# isl-primer

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bzlmod  dump_constraints.cpp  enumerate_points.cpp  examples.isl  get_domain.cpp  isl_api_examples.cpp  isl_api_examples.h  isl_api_examples_bin.cpp  isl_api_examples_test.cpp  precompose_transposition.cpp
.github/workflows/: build_and_test.yml
